<resources>
    <string name="app_name">LibroRead</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_books">All Books</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_started_books">Started Books</string>
    <string name="cover_of_the_book">The cover of the book</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="progress_s" formatted="true">Progress: %1$s</string>
    <string name="size_s" formatted="true">Size: %1$s</string>
    <string name="libroread">LibroRead</string>

    <string name="dlog_password_title">Password:</string>
    <string name="dlog_password_message">The document is encrypted.</string>
    <string name="dlog_password_retry">Invalid password.</string>
    <string name="text_search_hint">Search&#x2026;</string>
    <string name="toast_search_not_found">Search not found.</string>
    <string name="refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="based_on_the_mupdf_android_library_ncreated_on_04_03_2023_nby_sory">Based on the MuPDF Android library \nCreated on 04-03-2023\nBy Sory</string>
    <string name="when_first_opened">-When first opened, the app searches the path:\n /storage/emulated/0/Download/\n If it finds PDF files, it adds them to the database(name, size, page count) and upon each opening of the app it updates the database in a similar manner.</string>
    <string name="how_it_works">How it works:</string>
    <string name="about">About</string>
</resources>