<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_books"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/menu_all_books" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_star_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_started_books"
            android:icon="@drawable/ic_baseline_start_24"
            android:title="@string/menu_started_books" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
    </group>
</menu>