<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_books">

    <fragment
        android:id="@+id/nav_all_books"
        android:name="com.sorykhan.libroread.AllBooksFragment"
        android:label="@string/menu_all_books"
        tools:layout="@layout/fragment_all_books" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.sorykhan.libroread.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_started_books"
        android:name="com.sorykhan.libroread.StartedBooksFragment"
        android:label="@string/menu_started_books"
        tools:layout="@layout/fragment_started_books" />
</navigation>